add_definitions(
  -DSQLITE_ENABLE_COLUMN_METADATA
  -DSQLITE_ENABLE_API_ARMOR
  -DSQLITE_ENABLE_JSON1
  -DSQLITE_ENABLE_MEMORY_MANAGEMENT
  # Functionality disables
  -DSQLITE_DISABLE_LFS
  -DSQLITE_DISABLE_DIRSYNC
  -DSQLITE_DISABLE_FTS3_UNICODE
  -DSQLITE_DISABLE_FTS4_DEFERRED
  # Omit features
  -DSQLITE_OMIT_ALTERTABLE
  -DSQLITE_OMIT_ATTACH
  -DSQLITE_OMIT_AUTHORIZATION
  -DSQLITE_OMIT_AUTORESET
  -DSQLITE_OMIT_DEPRECATED
  -DSQLITE_OMIT_FOREIGN_KEY
  -DSQLITE_OMIT_LOAD_EXTENSION
  -DSQLITE_OMIT_LOOKASIDE
  -DSQLITE_OMIT_PROGRESS_CALLBACK
  -DSQLITE_OMIT_SHARED_CACHE
  -DSQLITE_OMIT_TCL_VARIABLE
  -DSQLITE_OMIT_TEMPDB
  -DSQLITE_OMIT_TRACE
  -DSQLITE_OMIT_TRIGGER
  # Omitting the WAL will prevent database file access.
  #-DSQLITE_OMIT_WAL
  -DSQLITE_ENABLE_DBSTAT_VTAB
)

if(NOT WIN32)
  add_compile_options(
    -Wno-parentheses-equality
    -Wno-unused-value
  )
endif()

add_library(osquery_sqlite OBJECT sqlite3.c)
