add_definitions(
  -DSQLITE_ENABLE_API_ARMOR
  -DSQLITE_ENABLE_COLUMN_METADATA
  -DSQLITE_ENABLE_DBSTAT_VTAB
  -DSQLITE_ENABLE_JSON1
  -DSQLITE_ENABLE_MEMORY_MANAGEMENT
  -DSQLITE_ENABLE_UNLOCK_NOTIFY
  -DSQLITE_SECURE_DELETE
  -DSQLITE_DISABLE_DIRSYNC
  -DSQLITE_DISABLE_FTS3_UNICODE
  -DSQLITE_DISABLE_FTS4_DEFERRED
  -DSQLITE_DISABLE_LFS
  -DSQLITE_OMIT_DEPRECATED
  -DSQLITE_OMIT_LOAD_EXTENSION
  -DSQLITE_OMIT_LOOKASIDE
  -DSQLITE_OMIT_PROGRESS_CALLBACK
  -DSQLITE_OMIT_SHARED_CACHE
  -DSQLITE_OMIT_TCL_VARIABLE
  -DSQLITE_OMIT_TRACE
)

if(NOT WIN32)
  add_compile_options(
    -Wno-parentheses-equality
    -Wno-unused-value
  )
endif()

add_library(osquery_sqlite OBJECT sqlite3.c)
